--- a/src/app/components/icon/icon.component.html
+++ b/src/app/components/icon/icon.component.html
@@ -1,1 +1,3 @@
-<p>icon works!</p>
+<a class="icon nav-link " title=" {{ title }} ">
+  <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon=" {{ icon }} "></mat-icon>
+</a>
