CRUD com sweetalert2

--- a/src/app/pages/edit/edit.component.html
+++ b/src/app/pages/edit/edit.component.html
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="col col-2">
           <label for="nome" class="form-label">Preço</label>
-          <input type="text" class="form-control" id="preco" aria-describedby="nameHelp" formControlName="preco" placeholder="Digite o preço do produto">
+          <input type="number" class="form-control" id="preco" aria-describedby="nameHelp" formControlName="preco" placeholder="Digite o preço do produto">
       </div>
     </div>
     <app-button label="Voltar"></app-button>
