--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,4 +1,4 @@
-<button type="button"
+<button type="button" class="m-2"
   class="btn btn-{{ color }}
   {{ size ? 'btn-' + size : ''}}"
   [disabled] = "disabled">
