--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,6 +1,5 @@
 <h1 class="display-12 mt-3 text-center">Lista de Produtos</h1>
 <hr>
-<a class="btn btn-dark mb-3" routerLink="/products/create">Novo</a>
 <div class="table-responsive tbProdutos">
   <table class="table table-light table-striped table-bordered p-0 table-hover">
     <thead class="table-dark">
@@ -30,3 +29,4 @@
     </tbody>
   </table>
 </div>
+<a class="btn btn-dark mt-3" routerLink="/products/create">Novo</a>
