--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<div class="container-fluid text-center">
+  <h1 class="display-1 mt-3 text-center titulo">App de Produtos</h1>
+  <h1 class="display-5 mt-3 text-center subTitulo">Bem vindo!</h1>
+  <div class="row justify-content-md-center">
+    <div class="col-md-4">
+      <div class="container image p-0"></div>
+    </div>
+    <div class="col-md-4 text-start">
+      <div class="container">
+        <h1 class="display-1 mt-3 text-center">Sobre</h1>
+        <p class="">Este aplicativo é o resultado final de um curso de treinamento de Angular/Java ministrados pelos professores Eduardo, Gleyser e Rafael da Minsait</p>
+      </div>
+    </div>
+  </div>
+</div>
+
