--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,17 @@
     <div class="col-md-4 text-start">
       <div class="container">
         <h1 class="display-1 mt-3 text-center">Sobre</h1>
-        <p class="">Este aplicativo é o resultado final de um curso de treinamento de Angular/Java ministrados pelos professores Eduardo, Gleyser e Rafael da Minsait</p>
+        <p>Este aplicativo é o resultado final de um curso de treinamento de Angular/Java ministrados pelos professores Eduardo, Gleyser e Rafael da Minsait</p>
+        <br>
+        <p>O aplicativo foi construído com:</p>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Angular 15.2.4</li>
+          <li class="list-group-item">Bootstrap 5.3.2</li>
+          <li class="list-group-item">Sweetalert2 11.8.0</li>
+          <li class="list-group-item">Material 15.2.9</li>
+        </ul>
+        <br>
+        <p>Este aplicativo consome dados do aplicativo de backend em Java que acessa um banco MySQL</p>
       </div>
     </div>
   </div>
