--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -42,6 +42,6 @@
       </div>
     </div>
     <app-button label="Voltar" [routerLink]="['/products/']"></app-button>
-    <button type="submit" class="btn btn-dark">Atualizar</button>
+    <button type="submit" class="btn btn-dark">Cadastrar</button>
   </form>
 </div>
